# the-bread-bin

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: arch-build.yml
apps/gui-editor/: CMakeLists.txt  main_gui.cpp
apps/gui-editor/include/: CatppuccinLatteStyle.hpp  LoafBrowser.hpp  LoafEditor.hpp  LoafScripter.hpp  TextEditor.hpp  ThemeEditor.hpp  ThemeLoader.hpp
apps/gui-editor/src/: LoafBrowser.cpp  LoafEditor.cpp  LoafScripter.cpp  TextEditor.cpp  ThemeEditor.cpp  ThemeLoader.cpp
apps/tui-editor/: CMakeLists.txt
core/: CMakeLists.txt
core/include/breadbin/: AppRegistry.hpp  LoafFile.hpp  LoafRunner.hpp  ReloadManager.hpp  ScriptFile.hpp  TextFile.hpp  ThemeFile.hpp
core/src/: LoafFile.cpp  LoafRunner.cpp  ReloadManager.cpp  ScriptFile.cpp  TextFile.cpp  ThemeFile.cpp
include/: AppDiscovery.h  Loaf.h  LoafEditor.h  LoafItem.h  TextEditor.h  ThemeEditor.h
include/gui/: AppBrowserWidget.h  HomeWidget.h  LoafBrowserWidget.h  LoafEditorWidget.h  LoafRuntimeWidget.h  MainWindow.h  ResourceLoader.h  TextEditorWidget.h  ThemeBrowserWidget.h  ThemeEditorWidget.h
resources/: resources.qrc
resources/styles/common/: form_label.qss  paths_label.qss  preview_text.qss  search_label_60.qss  search_label_70.qss  status_label.qss
resources/styles/main_window/: custom_theme.qss  warm_theme.qss
resources/styles/widgets/: home_new_loaf_button.qss  home_subtitle_label.qss  home_welcome_label.qss  runtime_loaf_name_label.qss  runtime_run_button.qss  runtime_status_label.qss  runtime_stop_button.qss  text_editor_output.qss  theme_browser_apply_button.qss  theme_browser_colour_preview.qss  theme_editor_colour_preview_template.qss  theme_editor_picker_colour_template.qss
resources/templates/: about_dialog.html  app_details.html  home_welcome.html  loaf_preview.html  theme_preview.html
src/: AppDiscovery.cc  Loaf.cc  LoafEditor.cc  LoafItem.cc  TextEditor.cc  ThemeEditor.cc  main.cc  main_gui.cc
src/gui/: AppBrowserWidget.cc  HomeWidget.cc  LoafBrowserWidget.cc  LoafEditorWidget.cc  LoafRuntimeWidget.cc  MainWindow.cc  ResourceLoader.cc  TextEditorWidget.cc  ThemeBrowserWidget.cc  ThemeEditorWidget.cc
tests/: test_yaml_logic.cpp
themes/: CatppuccinLatte.toml  theme.toml
